# py-minisam

./: README.md  pyproject.toml
.github/workflows/: ubuntu.yaml
examples/: find_3d_rotation.py  jac.py  m3500.py
src/py_minisam/: __about__.py  auto_diff.py  factor_graph.py  problem.py  tinysolver.py
src/py_minisam/optimizer/: __init__.py  base_optimizer.py  gauss_newton_optimizer.py  levenberg_marquardt_optimizer.py
tests/: __init__.py  test_optimizer.py
