[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-minisam"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Powei Lin", email = "poweilin1994@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["scipy"]

[project.urls]
Documentation = "https://github.com/unknown/py-minisam#readme"
Issues = "https://github.com/unknown/py-minisam/issues"
Source = "https://github.com/unknown/py-minisam"

[tool.hatch.version]
path = "src/py_minisam/__about__.py"

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.default]
type = "pip-compile"
pip-compile-verbose = true
pip-compile-resolver = "uv"
pip-compile-installer = "uv"
dependencies = ["coverage[toml]>=6.5", "pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=24.1.0", "mypy>=1.0.0", "ruff>=0.2.0"]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/torc/calibration/backend tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.hatch.build]
exclude = ["tests/data"]

[tool.hatch.build.targets.wheel]
packages = ["src/py_minisam"]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "A003",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # PEP 257 / google convention
  "D203",
  "D213",
  "D215",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]
[tool.ruff.lint.isort]
known-first-party = ["torc.calibration.backend"]
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "D", "T", "F401"]
"src/**/__about__.py" = ["D100", "D104"]
"tutorial/*.py" = ["D401", "T201"]

[tool.coverage.run]
source_pkgs = ["py_minisam", "tests"]
branch = true
parallel = true
omit = ["src/py_minisam/__about__.py"]

[tool.coverage.paths]
py_minisam = ["src/py_minisam", "*/py-minisam/src/py_minisam"]
tests = ["tests", "*/py-minisam/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
